configurando Swagger, nginx e app.js
